--- a/study-ireland/app/sass/blocks/nav.scss
+++ b/study-ireland/app/sass/blocks/nav.scss
@@ -1,5 +1,6 @@
 .nav__list {
   display: flex;
+  justify-content: flex-end;
   align-items: center;
   margin: 0;
   padding: 0;
@@ -9,7 +10,7 @@
 .nav__item {
   margin-right: 35px;
   
-  &:first-child {
+  &--logo {
     position: relative;
     margin-right: auto;
   }
@@ -21,7 +22,7 @@
 
 .nav__logo {
   position: absolute;
-  top: -30px;
+  top: -20px;
   left: 0;
   padding: 13px;
   border-radius: 50%;
@@ -31,4 +32,69 @@
 .nav__link {
   color: inherit;
   text-decoration: none;
+}
+
+.nav__button {
+  display: none;
+}
+
+@media screen and ($mobile-width) {
+  .nav__logo {
+    padding: 10px;
+  }
+  
+  .nav__list {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: calc(100% - 70px);
+    background-color: #FFFFFF;
+    background-image: url('../img/intro-bg.jpg');
+    background-position: left;
+    background-size: cover;
+    transition: 0.4s;
+    z-index: -1;
+    
+    &--hide {
+      left: -100%;
+    }
+  }
+  
+  .nav__item {
+    margin-right: 0;
+    margin-bottom: 30px;
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+    
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  
+  .nav__link {
+    color: #FFFFFF;
+  }
+  
+  .nav__button {
+    display: block;
+    margin-left: auto;
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color: transparent;
+    background-image: url('../img/svg/nav.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    outline: none;
+    transition: 0.3s;
+    
+    &--close {
+      background-image: url('../img/svg/close.svg');
+    }
+  }
 }
