--- a/study-ireland/app/sass/blocks/button.scss
+++ b/study-ireland/app/sass/blocks/button.scss
@@ -19,9 +19,14 @@
     width: 145px;
     margin: auto;
   }
-  
-  &--block {
-    box-sizing: border-box;
-    display: block;
+}
+
+@media screen and ($mobile-width) {
+  .button {
+    
+    &--block {
+      box-sizing: border-box;
+      display: block;
+    }
   }
 }
