--- a/study-summer/uk/app/sass/global/fonts.scss
+++ b/study-summer/uk/app/sass/global/fonts.scss
@@ -3,7 +3,7 @@
   src: local('GothamPro'),
     url('../fonts/GothamPro.woff2') format('woff2'),
     url('../fonts/GothamPro.woff') format('woff');
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
@@ -23,7 +23,7 @@
   src: local('GothamPro-Bold'),
     url('../fonts/GothamPro-Bold.woff2') format('woff2'),
     url('../fonts/GothamPro-Bold.woff') format('woff');
-  font-weight: bold;
+  font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
