--- a/study-summer/uk/app/sass/program/info.scss
+++ b/study-summer/uk/app/sass/program/info.scss
@@ -42,7 +42,7 @@
 
 .info__tabs {
   position: relative;
-  height: 393px;
+  height: 390px;
 }
 
 .info__tab {
@@ -67,7 +67,7 @@
 
 .info__slider {
   position: relative;
-  width: 570px;
+  width: 565px;
   height: inherit;
   overflow: hidden;
 }
@@ -77,7 +77,7 @@
   left: 0;
   display: flex;
   align-items: flex-start;
-  width: 200%;
+  width: 400%;
   height: inherit;
   margin: 0;
   padding: 0;
@@ -162,7 +162,7 @@
 
 .info__wrapper {
   box-sizing: border-box;
-  width: 600px;
+  width: 605px;
   padding: 35px 30px;
   padding-right: 20px;
 }
@@ -211,5 +211,74 @@
     height: 8px;
     border-radius: 50%;
     background-color: $blue;
+  }
+}
+
+@media screen and ($tablet-widths) {
+  .info__button {
+    padding: 15px 10px;
+    font-size: 16px;
+    
+    &:first-child {
+      margin-left: 10px;
+    }
+  }
+  
+  .info__tab {
+    width: 100%;
+  }
+  
+  .info__slider {
+    width: 40%;
+  }
+  
+  .info__photo {
+    height: 390px;
+  }
+  
+  .info__wrapper {
+    width: 60%;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .info__button {
+    display: block;
+    width: 100%;
+    margin-bottom: 5px;
+    border-radius: 7px;
+    
+    &:first-child {
+      margin-left: 0;
+    }
+  }
+  
+  .info__tabs {
+    height: auto;
+  }
+  
+  .info__tab {
+    flex-direction: column;
+    height: auto;
+    margin-bottom: 50px;
+  }
+  
+  .info__slider {
+    width: 100%;
+    height: 280px;
+  }
+  
+  .info__photo {
+    height: 280px;
+  }
+  
+  .info__wrapper {
+    width: 100%;
+    height: 400px;
+    padding: 20px 15px 20px 20px;
+  }
+  
+  .info__content {
+    padding-right: 10px;
   }
 }
