--- a/study-summer/uk/app/sass/program/intro.scss
+++ b/study-summer/uk/app/sass/program/intro.scss
@@ -113,6 +113,7 @@
   
   .intro__column {
     width: 100%;
+    max-width: 500px;
     
     &:first-child {
       margin-right: 0;
@@ -122,5 +123,13 @@
   
   .intro__play {
     background-size: 55px;
+  }
+  
+  .intro__button {
+    box-sizing: border-box;
+    display: block;
+    width: 205px;
+    margin: auto;
+    text-align: center;
   }
 }
