--- a/study-summer/uk/app/sass/program/leader.scss
+++ b/study-summer/uk/app/sass/program/leader.scss
@@ -179,6 +179,7 @@
 @media screen and ($mobile-widths) {
   .leader__slider {
     width: 100%;
+    max-width: 500px;
     margin-bottom: 35px;
   }
   
