--- a/study-summer/uk/app/sass/program.scss
+++ b/study-summer/uk/app/sass/program.scss
@@ -12,3 +12,6 @@
 @import 'program/heading';
 @import 'program/leader';
 @import 'program/photo';
+@import 'program/review';
+@import 'program/request';
+@import 'program/footer';
