--- a/study-danit/app/sass/style.scss
+++ b/study-danit/app/sass/style.scss
@@ -7,7 +7,9 @@
 @import 'blocks/intro';
 @import 'blocks/edge';
 @import 'blocks/about';
+@import 'blocks/career';
 @import 'blocks/cost';
+@import 'blocks/review';
 @import 'blocks/contact';
 @import 'blocks/request';
 @import 'blocks/footer';
