--- a/study-danit/app/sass/blocks/cost.scss
+++ b/study-danit/app/sass/blocks/cost.scss
@@ -102,8 +102,60 @@
   margin: 0;
   padding: 10px 0;
   color: #FFFFFF;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 700;
   text-align: center;
   background-color: #78b4fb;
+}
+
+.cost__button {
+  display: block;
+  width: 195px;
+  margin: auto;
+  padding: 10px 0;
+  color: #FFFFFF;
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 5px;
+  box-shadow: 0px 1px 13px 0px rgba(64, 64, 64, 0.8);
+  background-color: #78b4fb;
+  outline: none;
+  transition: 0.2s;
+  
+  &:hover,
+  &:focus {
+    background-color: darken(#78b4fb, 5%);
+    transform: translateY(-5px);
+  }
+}
+
+@media screen and ($tablet-widths) {
+  .cost__list {
+    flex-wrap: wrap;
+    width: 580px;
+    margin: auto;
+  }
+  
+  .cost__item {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .cost__title {
+    font-size: 30px;
+  }
+  
+  .cost__list {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  
+  .cost__item {
+    margin-bottom: 20px;
+  }
 }
