--- a/study-danit/app/sass/style.scss
+++ b/study-danit/app/sass/style.scss
@@ -7,6 +7,8 @@
 @import 'blocks/intro';
 @import 'blocks/edge';
 @import 'blocks/about';
+@import 'blocks/study';
+@import 'blocks/edu';
 @import 'blocks/career';
 @import 'blocks/cost';
 @import 'blocks/review';
