--- a/study-danit/app/sass/blocks/study.scss
+++ b/study-danit/app/sass/blocks/study.scss
@@ -57,6 +57,10 @@
   outline: none;
   transition: 0.2s;
   
+  &--active {
+    flex-grow: 2;
+  }
+  
   &:last-child {
     margin-right: 0;
   }
@@ -116,12 +120,24 @@
   }
 }
 
-.study__content {
-  padding: 25px 30px;
-  border-left: 50px solid #78b4fb;
+.study__slider {
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
   box-shadow: 0px 1px 13px 0px rgba(64, 64, 64, 0.8);
+  overflow: hidden;
+}
+
+.study__subslider {
+  position: relative;
+  left: 0;
+  display: flex;
+  width: 300%;
+  transition: 0.5s;
+}
+
+.study__content {
+  padding: 25px 30px;
+  border-left: 50px solid #78b4fb;
   background-color: #FFFFFF;
 }
 
