--- a/study-danit/app/sass/blocks/edge.scss
+++ b/study-danit/app/sass/blocks/edge.scss
@@ -47,7 +47,7 @@
   background-color: transparent;
   cursor: pointer;
   outline: none;
-  transition: 0.2s;
+  transition: 0.3s;
   
   &--active {
     color: #FFFFFF;
@@ -71,6 +71,14 @@
   padding-left: 15px;
   box-shadow: 0px 4px 22px 0px rgba(0, 0, 0, 0.2);
   background-color: #FFFFFF;
+  opacity: 0;
+  transition: 0.5s;
+  transform: translateX(50px);
+  
+  &--show {
+    opacity: 1;
+    transform: none;
+  }
 }
 
 .edge__name {
