--- a/study-danit/app/sass/blocks/intro.scss
+++ b/study-danit/app/sass/blocks/intro.scss
@@ -48,7 +48,7 @@
   width: 860px;
 }
 
-.intro__video {
+.intro__poster {
   position: relative;
   width: 100%;
   height: 515px;
@@ -57,6 +57,17 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.intro__video {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: 0.5s;
 }
 
 .intro__play {
@@ -143,7 +154,7 @@
     color: #FFFFFF;
   }
   
-  .intro__video {
+  .intro__poster {
     
     &::after {
       content: '';
@@ -183,7 +194,7 @@
     padding: 0 20px;
   }
   
-  .intro__video {
+  .intro__poster {
     height: 450px;
   }
   
