--- a/study-danit/app/sass/blocks/edge.scss
+++ b/study-danit/app/sass/blocks/edge.scss
@@ -5,6 +5,7 @@
 
 .edge__wrapper {
   position: relative;
+  perspective: 1000px;
 }
 
 .edge__title {
@@ -49,6 +50,11 @@
   outline: none;
   transition: 0.3s;
   
+  &--hide {
+    opacity: 0;
+    transform: translateX(30px);
+  }
+  
   &--active {
     color: #FFFFFF;
   }
@@ -72,12 +78,18 @@
   box-shadow: 0px 4px 22px 0px rgba(0, 0, 0, 0.2);
   background-color: #FFFFFF;
   opacity: 0;
-  transition: 0.5s;
-  transform: translateX(15px);
+  transition: 0.8s;
+  transform: rotateX(180deg);
   
   &--show {
     opacity: 1;
-    transform: none;
+    transform: rotateX(0deg);
+    // transform: rotate3d(0, 0, 0, 60deg);
+  }
+  
+  &--hide {
+    opacity: 0;
+    transform: translateX(50px);
   }
 }
 
