--- a/study-danit/app/sass/blocks/danit.scss
+++ b/study-danit/app/sass/blocks/danit.scss
@@ -59,6 +59,7 @@
   top: 0;
   width: 100%;
   height: 50px;
+  margin-bottom: 20px;
   padding-left: 75px;
   color: $text;
   font-size: 16px;
@@ -66,7 +67,8 @@
   font-family: inherit;
   text-align: left;
   border: none;
-  border-radius: 5px;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
   box-shadow: 0px 1px 13px 0px rgba(64, 64, 64, 0.8);
   background-color: #FFFFFF;
   background-image: url('../img/study-button-m.png');
@@ -82,6 +84,7 @@
   }
   
   &--hide {
+    border-radius: 5px;
     background-image: url('../img/study-button-p.png');
   }
   
@@ -97,76 +100,122 @@
     background-position: center;
   }
   
-  &:nth-child(1) {
+  &--1 {
     
     &::before {
       background-image: url('../img/danit-button-1.png');
     }
   }
   
-  &:nth-child(2) {
+  &--2 {
     
     &::before {
       background-image: url('../img/danit-button-2.png');
     }
   }
   
-  &:nth-child(3) {
+  &--3 {
     
     &::before {
       background-image: url('../img/danit-button-3.png');
     }
   }
   
-  &:nth-child(4) {
+  &--4 {
     
     &::before {
       background-image: url('../img/danit-button-4.png');
     }
   }
   
-  &:nth-child(5) {
+  &--5 {
+    
+    &::before {
+      background-image: url('../img/danit-button-5.png');
+    }
+  }
+  
+  &--6 {
     
     &::before {
       background-image: url('../img/danit-button-6.png');
     }
   }
   
-  &:nth-child(7) {
+  &--7 {
     
     &::before {
       background-image: url('../img/danit-button-7.png');
     }
   }
   
-  &:nth-child(8) {
+  &--8 {
     
     &::before {
       background-image: url('../img/danit-button-8.png');
     }
   }
-  
-  &:hover,
-  &:focus {
-    top: -5px;
-  }
+}
+
+.danit__box {
+  position: relative;
 }
 
 .danit__desc {
+  position: absolute;
+  top: 40px;
+  left: 0;
   box-sizing: border-box;
   width: 100%;
-  height: 100px;
   margin: 10px 0;
-  padding: 15px;
-  border-radius: 5px;
+  padding: 10px 0;
+  padding-right: 10px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
   box-shadow: 0px 1px 13px 0px rgba(64, 64, 64, 0.8);
   background-color: #FFFFFF;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  overflow: hidden;
   transition: 0.5s;
+  z-index: 1;
   
   &--hide {
     height: 0;
-    padding: 0 15px;
+    padding: 0;
+    padding-right: 10px;
+    opacity: 0;
+  }
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 100%;
+    background-color: #78b4fb;
+  }
+}
+
+.danit__list {
+  position: relative;
+  margin: 0;
+  margin-left: 23px;
+  padding: 0;
+  list-style: none;
+  z-index: 1;
+}
+
+.danit__item {
+  margin-bottom: 10px;
+  padding-left: 55px;
+  background-image: url('../img/svg/tick.svg');
+  background-repeat: no-repeat;
+  background-position: left 4px;
+  background-size: 15px;
+  
+  &:last-child {
+    margin-bottom: 0;
   }
 }
 
