--- a/study-danit/app/sass/blocks/study.scss
+++ b/study-danit/app/sass/blocks/study.scss
@@ -137,15 +137,43 @@
 }
 
 .study__content {
+  position: relative;
+  width: 100%;
   padding: 25px 0;
   padding-right: 30px;
   background-color: #FFFFFF;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50px;
+    height: 100%;
+    background-color: #78b4fb;
+  }
+}
+
+.study__list {
+  position: relative;
+  width: 100%;
+  margin: 0;
+  margin-left: 18px;
+  padding: 0;
+  list-style: none;
+  z-index: 1;
 }
 
 .study__text {
+  margin-bottom: 10px;
+  padding-left: 55px;
   color: $text;
   font-size: 16px;
   font-weight: 400;
+  background-image: url('../img/svg/tick.svg');
+  background-repeat: no-repeat;
+  background-position: left 4px;
+  background-size: 15px;
   
   &:first-child {
     margin-top: 0;
