--- a/study-danit/app/sass/blocks/header.scss
+++ b/study-danit/app/sass/blocks/header.scss
@@ -3,14 +3,19 @@
   top: 0;
   left: 0;
   width: 100%;
-  padding: 20px 0;
+  padding: 10px 0;
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.2);
-  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(10px);
   transition: 0.2s;
   z-index: 4;
   
   &:hover {
-    background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(255, 255, 255, 0.9);
+    backdrop-filter: blur(0);
+    
+    .header__anchor {
+      color: $text;
+    }
   }
 }
 
@@ -53,8 +58,8 @@
 
 .header__anchor {
   padding-top: 35px;
-  padding-bottom: 31px;
-  color: $text;
+  padding-bottom: 22px;
+  color: #FFFFFF;
   font-size: 18px;
   font-weight: 600;
   text-decoration: none;
