--- a/study-danit/app/sass/blocks/intro.scss
+++ b/study-danit/app/sass/blocks/intro.scss
@@ -1,34 +1,18 @@
 .intro__wrapper {
   position: relative;
-}
-
-.intro__right {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 470px;
-  padding-bottom: 330px;
-  z-index: 1;
-  
-  &::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 305px;
-    background-color: #32d6e8;
-  }
+  height: 700px;
 }
 
 .intro__title {
+  position: relative;
   margin-top: 0;
   margin-bottom: 20px;
-  padding-right: 40px;
-  padding-left: 80px;
-  color: $text;
-  font-size: 30px;
+  padding-top: 150px;
+  color: #FFFFFF;
+  font-size: 35px;
   font-weight: 600;
+  text-align: center;
+  z-index: 1;
   
   &--blue {
     color: #093069;
@@ -36,124 +20,120 @@
 }
 
 .intro__text {
-  margin: 0;
-  padding-right: 20px;
-  padding-left: 180px;
-  color: $text;
-  font-size: 16px;
-  font-weight: 400;
-}
-
-.intro__left {
-  width: 860px;
-}
-
-.intro__video {
-  width: 100%;
-  height: 515px;
-  object-fit: cover;
-}
-
-.intro__list {
   position: relative;
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
-  padding-top: 35px;
-  padding-right: 70px;
-  padding-bottom: 35px;
-  padding-left: 15px;
-  list-style: none;
-  box-shadow: 0px 4px 22px 0px rgba(0, 0, 0, 0.2);
-  background-color: #FFFFFF;
+  margin-top: 0;
+  margin-bottom: 30px;
+  color: #FFFFFF;
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
   z-index: 1;
 }
 
+.intro__button {
+  position: relative;
+  display: block;
+  width: 195px;
+  margin: auto;
+  padding: 8px 0;
+  color: #FFFFFF;
+  font-size: 18px;
+  font-weight: 400;
+  text-align: center;
+  text-decoration: none;
+  box-shadow: 0px 1px 13px 0px rgba(64, 64, 64, 0.8);
+  border-radius: 5px;
+  backdrop-filter: blur(50px);
+  transition: 0.2s;
+  z-index: 1;
+  
+  &:hover,
+  &:focus {
+    transform: translateY(-5px);  
+  }
+}
+
+.intro__video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.intro__box {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 20px;
+  padding-bottom: 0;
+  box-shadow: 0px 4px 22px 0px rgba(0, 0, 0, 0.2);
+  // background-color: #FFFFFF;
+  backdrop-filter: blur(10px);
+  z-index: 1;
+}
+
+.intro__sublist {
+  margin-top: 0;
+  margin-bottom: 30px;
+  color: #FFFFFF;
+  font-size: 18px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.intro__list {
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+  width: 1200px;
+  margin: 0 auto;
+  padding-right: 15px;
+  padding-bottom: 35px;
+  padding-left: 15px;
+  list-style: none;
+}
+
 .intro__item {
-  padding-top: 70px;
-  color: #2a2a2a;
+  padding-left: 30px;
+  // color: #2a2a2a;
+  color: #FFFFFF;
   font-size: 16px;
   font-weight: 400;
+  background-image: url('../img/svg/tick-blue.svg');
   background-repeat: no-repeat;
-  background-position: left top;
-  
-  &:nth-child(1) {
-    background-image: url('../img/intro-1.png');
-  }
-  
-  &:nth-child(2) {
-    background-image: url('../img/intro-2.png');
-  }
-  
-  &:nth-child(3) {
-    background-image: url('../img/intro-3.png');
-  }
-  
-  &:nth-child(4) {
-    background-image: url('../img/intro-4.png');
-  }
+  background-position: left 2px;
+  background-size: 18px;
 }
 
 @media screen and ($tablet-widths) {
-  .intro__left {
-    width: 100%;
-  }
-  
-  .intro__title {
-    color: #FFFFFF;
-    
-    &--blue {
-      color: #FFFFFF;
-    }
-  }
-  
-  .intro__text {
-    color: #FFFFFF;
-  }
-  
-  .intro__poster {
-    
-    &::after {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.3);
-    }
-  }
-  
   .intro__list {
-    padding-right: 50px;
-    padding-left: 50px;
+    width: 100%;
   }
 }
 
-@media screen and (max-width: 900px) {
-  .intro__right {
-    top: 200px;
-    bottom: auto;
-    width: 100%;
-    text-align: center;
+@media screen and ($mobile-widths) {
+  .intro__wrapper {
+    height: auto;
   }
   
   .intro__title {
-    padding: 0 20px;
+    padding-top: 150px;
     font-size: 22px;
   }
   
   .intro__text {
+    margin-bottom: 400px;
     padding: 0 20px;
+    font-size: 16px;
   }
   
-  .intro__poster {
-    height: 450px;
-  }
-  
-  .intro__right {
+  .intro__sublist {
     
-    &::after {
+    br {
       display: none;
     }
   }
@@ -166,7 +146,7 @@
   .intro__item {
     margin-bottom: 30px;
     text-align: center;
-    background-position: top;
+    // background-position: top;
     
     &:last-child {
       margin-bottom: 0;
