--- a/study-danit/app/sass/global/base.scss
+++ b/study-danit/app/sass/global/base.scss
@@ -13,6 +13,11 @@ body {
   width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
+  
+  &--full {
+    width: 100%;
+    padding: 0;
+  }
 }
 
 ::-webkit-scrollbar {
