--- a/study-danit/app/sass/blocks/about.scss
+++ b/study-danit/app/sass/blocks/about.scss
@@ -118,7 +118,7 @@
   padding-left: 20px;
   background-image: url('../img/li.png');
   background-repeat: no-repeat;
-  background-position: left;
+  background-position: left 4px;
 }
 
 .about__image {
@@ -261,5 +261,19 @@
   .about__switch {
     margin: auto;
     margin-bottom: 30px;
+    
+    &::after {
+      animation: fill 0.8s infinite alternate;
+    }
+  }
+  
+  @keyframes fill {
+    0% {
+      
+    }
+    
+    100% {
+      width: 70%;
+    }
   }
 }
