--- a/study-danit/app/sass/blocks/cost.scss
+++ b/study-danit/app/sass/blocks/cost.scss
@@ -150,7 +150,7 @@
   }
   
   .cost__list {
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
     width: 100%;
     margin-bottom: 15px;
