--- a/study-danit/app/sass/blocks/edge.scss
+++ b/study-danit/app/sass/blocks/edge.scss
@@ -169,24 +169,26 @@
   }
   
   .edge__control {
-    flex-direction: row;
-    flex-wrap: wrap;
     align-items: center;
     width: 100%;
-    height: 400px;
+    height: 420px;
     padding: 20px 15px;
     background-position: left;
     image-rendering: unset;
   }
   
   .edge__button {
-    min-width: 50%;
-    font-size: 14px;
-    text-align: center;
+    width: 165px;
+    margin-bottom: 20px;
+    font-size: 16px;
+    
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
   
   .edge__content {
-    top: 510px;
+    top: 530px;
     right: auto;
     bottom: auto;
     left: 50%;
