--- a/study-danit/app/sass/blocks/intro.scss
+++ b/study-danit/app/sass/blocks/intro.scss
@@ -69,9 +69,7 @@
   box-sizing: border-box;
   width: 100%;
   padding: 20px;
-  padding-bottom: 0;
   box-shadow: 0px 4px 22px 0px rgba(0, 0, 0, 0.2);
-  // background-color: #FFFFFF;
   backdrop-filter: blur(10px);
   z-index: 1;
 }
@@ -92,20 +90,18 @@
   width: 1200px;
   margin: 0 auto;
   padding-right: 15px;
-  padding-bottom: 35px;
   padding-left: 15px;
   list-style: none;
 }
 
 .intro__item {
   padding-left: 30px;
-  // color: #2a2a2a;
   color: #FFFFFF;
   font-size: 16px;
   font-weight: 400;
   background-image: url('../img/svg/tick-blue.svg');
   background-repeat: no-repeat;
-  background-position: left 2px;
+  background-position: left 4px;
   background-size: 18px;
 }
 
@@ -118,6 +114,7 @@
 @media screen and ($mobile-widths) {
   .intro__wrapper {
     height: auto;
+    padding-bottom: 400px;
   }
   
   .intro__title {
@@ -126,8 +123,13 @@
   }
   
   .intro__text {
-    margin-bottom: 400px;
     padding: 0 20px;
+    font-size: 16px;
+  }
+  
+  .intro__button {
+    width: 160px;
+    margin-bottom: 100px;
     font-size: 16px;
   }
   
@@ -144,9 +146,8 @@
   }
   
   .intro__item {
+    width: 200px;
     margin-bottom: 30px;
-    text-align: center;
-    // background-position: top;
     
     &:last-child {
       margin-bottom: 0;
