--- a/study-danit/app/sass/blocks/header.scss
+++ b/study-danit/app/sass/blocks/header.scss
@@ -9,6 +9,14 @@
   transition: 0.2s;
   z-index: 4;
   
+  &--thankyou {
+    position: static;
+    
+    .header__anchor {
+      color: $text;
+    }
+  }
+  
   &:hover {
     background-color: rgba(255, 255, 255, 0.9);
     backdrop-filter: blur(0);
@@ -71,7 +79,7 @@
     padding-left: 30px;
     background-image: url('../img/svg/phone.svg');
     background-repeat: no-repeat;
-    background-position: left 55%;
+    background-position: left 38px;
     background-size: 20px;
   }
   
@@ -92,7 +100,6 @@
 @media screen and ($tablet-widths) {
   .header {
     box-sizing: border-box;
-    padding: 20px 15px;
   }
 }
 
@@ -154,6 +161,7 @@
     
     &--phone {
       padding-left: 30px;
+      background-position: left;
     }
   }
   
