--- a/study-as/source/sass/style.scss
+++ b/study-as/source/sass/style.scss
@@ -8,3 +8,7 @@
 @import 'blocks/intro';
 @import 'blocks/heading';
 @import 'blocks/button';
+@import 'blocks/short';
+@import 'blocks/edge';
+@import 'blocks/direction';
+@import 'blocks/video';
