--- a/study-as/source/sass/blocks/heading.scss
+++ b/study-as/source/sass/blocks/heading.scss
@@ -15,6 +15,8 @@
 
 @media screen and ($tablet) {
   .heading {
+    font-size: 30px;
+    text-align: center;
     
     &--small {
       font-size: 25px;
