--- a/study-as/source/sass/blocks/video.scss
+++ b/study-as/source/sass/blocks/video.scss
@@ -10,6 +10,7 @@
 }
 
 .video__quote {
+  position: relative;
   width: 750px;
   margin: 0 auto;
   margin-bottom: 50px;
@@ -20,15 +21,63 @@
   font-weight: 500;
   text-align: center;
   border: 2px solid #ffa800;
+  border-radius: 10px;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: -50px;
+    left: -45px;
+    width: 70px;
+    height: 45px;
+    background-image: url('../img/quote.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    transform: rotate(160deg);
+  }
+  
+  &::after {
+    content: '';
+    position: absolute;
+    right: -50px;
+    bottom: -50px;
+    width: 70px;
+    height: 45px;
+    background-image: url('../img/quote.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    transform: rotate(-30deg);
+  }
 }
 
 .video__play {
+  position: relative;
+  top: 0;
   display: block;
   width: 100px;
   height: 100px;
   margin: auto;
   margin-bottom: 40px;
-  background: red;
+  border: none;
+  background-color: transparent;
+  background-image: url('../img/youtube-button.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  cursor: pointer;
+  outline: none;
+  transition: 0.2s;
+  
+  &:hover,
+  &:focus {
+    top: -5px;
+  }
+  
+  &:active {
+    transform: scale(0.9);
+  }
 }
 
 .video__author {
@@ -37,4 +86,35 @@
   font-size: 24px;
   font-weight: 400;
   text-align: center;
+}
+
+@media screen and ($mobile) {
+  .video {
+    padding-top: 100px;
+  }
+  
+  .video__quote {
+    width: 95%;
+    padding: 30px 0;
+    font-size: 22px;
+    
+    &::before {
+      top: -20px;
+      left: -15px;
+    }
+    
+    &::after {
+      bottom: -20px;
+      right: -15px;
+    }
+  }
+  
+  .video__play {
+    width: 90px;
+    height: 90px;
+  }
+  
+  .video__author {
+    font-size: 20px;
+  }
 }
