--- a/study-as/source/sass/style.scss
+++ b/study-as/source/sass/style.scss
@@ -13,3 +13,10 @@
 @import 'blocks/direction';
 @import 'blocks/video';
 @import 'blocks/stage';
+@import 'blocks/add';
+
+@import 'blocks/cost';
+@import 'blocks/review';
+@import 'blocks/contact';
+@import 'blocks/request';
+@import 'blocks/footer';
