--- a/study-as/source/sass/blocks/stage.scss
+++ b/study-as/source/sass/blocks/stage.scss
@@ -8,6 +8,7 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 55px;
+  margin-bottom: 40px;
 }
 
 .stage__box {
@@ -23,8 +24,9 @@
   padding-bottom: 15px;
   padding-left: 15px;
   color: #35495f;
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 700;
+  font-family: inherit;
   text-align: left;
   border: none;
   background-color: #FFFFFF;
@@ -66,17 +68,31 @@
   }
 }
 
+.stage__overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(#FFFFFF, 0.4);
+  backdrop-filter: blur(10px);
+  z-index: 2;
+}
+
 .stage__wrapper {
   position: fixed;
   top: 50%;
   left: 50%;
   box-sizing: border-box;
+  display: none;
   width: 920px;
   padding: 30px;
   box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.3);
   background-color: rgba(#FFFFFF, 0.9);
   transform: translate(-50%, -50%);
   backdrop-filter: blur(10px);
+  z-index: 3;
 }
 
 .stage__close {
@@ -157,4 +173,113 @@
   margin: 15px 0;
   border: none;
   background-color: #ffa800;
+}
+
+.stage__flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.stage__button {
+  padding: 10px 20px;
+  color: #FFFFFF;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: inherit;
+  border: none;
+  border-radius: 5px;
+  background-color: $red;
+  cursor: pointer;
+  outline: none;
+  transition: 0.3s;
+  
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 5px 0px rgba(64, 64, 64, 0.8);
+  }
+}
+
+@media screen and ($tablet) {
+  .stage__control {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+  
+  .stage__control {
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
+  
+  .stage__box {
+    margin: 0 auto;
+    margin-bottom: 20px;
+  }
+  
+  .stage__open {
+    font-size: 20px;
+    
+    &--square {
+      width: 240px;
+      clip-path: polygon(85% 0, 100% 50%, 85% 100%, 0 100%, 0 0);
+    }
+  }
+}
+
+@media screen and (max-width: 955px) {
+  .stage__wrapper {
+    top: 0;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    max-width: 480px;
+    padding: 30px 20px;
+    padding-top: 40px;
+    transform: translate(-50%, 0%);
+    overflow-y: scroll;
+  }
+  
+  .stage__article {
+    flex-direction: column;
+  }
+  
+  .stage__left {
+    width: 100%;
+  }
+  
+  .stage__right {
+    width: 100%;
+  }
+  
+  .stage__title {
+    font-size: 25px;
+    text-align: center;
+  }
+  
+  .stage__image {
+    margin-bottom: 20px;
+  }
+  
+  .stage__text {
+    
+    br {
+      display: none;
+    }
+  }
+  
+  .stage__divider {
+    margin: 15px auto;
+  }
+  
+  .stage__flex {
+    flex-direction: column;
+  }
+  
+  .stage__button {
+    margin-bottom: 15px;
+    
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
