--- a/study-as/source/sass/style.scss
+++ b/study-as/source/sass/style.scss
@@ -14,7 +14,8 @@
 @import 'blocks/video';
 @import 'blocks/stage';
 @import 'blocks/add';
-
+@import 'blocks/info';
+@import 'blocks/teacher';
 @import 'blocks/cost';
 @import 'blocks/review';
 @import 'blocks/contact';
