--- a/study-as/source/sass/blocks/add.scss
+++ b/study-as/source/sass/blocks/add.scss
@@ -1,5 +1,5 @@
 .add {
-  padding: 70px 0;
+  padding: 80px 0;
 }
 
 .add__block {
@@ -114,5 +114,9 @@
   
   .add__content {
     order: 2;
+  }
+  
+  .add__name {
+    font-size: 25px;
   }
 }
