--- a/study-as/source/sass/blocks/contact.scss
+++ b/study-as/source/sass/blocks/contact.scss
@@ -41,10 +41,14 @@
   display: inline-block;
   margin-bottom: 20px;
   padding-left: 20px;
-  color: $red;
+  color: $text;
   font-size: 16px;
   font-weight: 400;
   text-decoration: none;
+  background-image: url('../img/phone.svg');
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: 15px;
 }
 
 .contact__address {
