--- a/study-as/source/sass/blocks/cost.scss
+++ b/study-as/source/sass/blocks/cost.scss
@@ -1,6 +1,6 @@
 .cost {
-  padding-top: 40px;
-  padding-bottom: 30px;
+  padding-top: 80px;
+  padding-bottom: 50px;
   background-color: #ebebeb;
 }
 
@@ -72,12 +72,13 @@
 
 .cost__checklist {
   margin: 0;
-  padding-left: 20px;
+  padding: 0;
   list-style: none;
 }
 
 .cost__check {
   margin-bottom: 10px;
+  margin-left: 15px;
   padding-left: 20px;
   color: $text;
   font-size: 14px;
@@ -87,8 +88,112 @@
   background-position: left 3px;
   background-size: 15px;
   
+  &--add {
+    margin-left: 0;
+    padding: 10px 0;
+    padding-left: 15px;
+    color: #FFFFFF;
+    background-color: $blue;
+    background-image: none;
+  }
+  
   &:last-child {
     margin-bottom: 15px;
+  }
+}
+
+.cost__label {
+  position: relative;
+  display: block;
+  padding-left: 25px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.cost__input {
+  position: absolute;
+  width: 0;
+  height: 0;
+  cursor: pointer;
+  opacity: 0;
+}
+
+.cost__checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 15px;
+  height: 15px;
+  border: 1px solid #FFFFFF;
+  background-color: transparent;
+  transition: 0.2s;
+}
+
+.cost__label {
+  
+  &:hover {
+    
+    .cost__input {
+      
+      ~ .cost__checkmark {
+        background-color: #FFFFFF;
+      }
+    }
+  }
+}
+
+.cost__label {
+  
+  .cost__input {
+    
+    &:checked {
+      
+      ~ .cost__checkmark {
+        border: 1px solid #2196F3;
+        background-color: #2196F3;
+      }
+    }
+  }
+}
+
+.cost__checkmark {
+  
+  &:after {
+    content: '';
+    position: absolute;
+    display: none;
+  }
+}
+
+.cost__label {
+  
+  .cost__input {
+    
+    &:checked {
+      
+      ~ .cost__checkmark {
+        
+        &::after {
+          display: block;
+        }
+      }
+    }
+  }
+}
+
+.cost__label {
+  
+  .cost__checkmark {
+    
+    &::after {
+      top: 0px;
+      left: 4px;
+      width: 5px;
+      height: 10px;
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      transform: rotate(45deg);
+    }
   }
 }
 
@@ -109,6 +214,7 @@
   font-size: 16px;
   font-weight: 400;
   font-style: italic;
+  line-height: 1.4em;
 }
 
 @media screen and ($tablet) {
@@ -157,6 +263,10 @@
   
   .cost__item {
     margin: auto;
+    
+    &:hover {
+      transform: none;
+    }
   }
   
   .cost__info {
