--- a/study-as/source/sass/blocks/nav.scss
+++ b/study-as/source/sass/blocks/nav.scss
@@ -24,9 +24,10 @@
   
   &--phone {
     padding-left: 25px;
-    background-image: url('../img/phone.png');
+    background-image: url('../img/phone.svg');
     background-repeat: no-repeat;
     background-position: left;
+    background-size: 20px;
   }
   
   &:hover,
@@ -47,7 +48,7 @@
     width: 100%;
     height: 100%;
     background-color: #FFFFFF;
-    transition: 0.2s;
+    transition: 0.5s;
     
     &--show {
       top: 0;
@@ -76,5 +77,20 @@
   
   .nav__menu {
     display: block;
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color: transparent;
+    background-image: url('../img/menu.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    outline: none;
+    transition: 0.2s;
+    z-index: 1;
+    
+    &--show {
+      background-image: url('../img/close-menu.svg');
+    }
   }
 }
