--- a/study-as/source/sass/blocks/stage.scss
+++ b/study-as/source/sass/blocks/stage.scss
@@ -73,12 +73,20 @@
   position: fixed;
   top: 0;
   left: 0;
-  display: none;
   width: 100%;
   height: 100%;
-  background-color: rgba(#FFFFFF, 0.4);
-  backdrop-filter: blur(10px);
-  z-index: 2;
+  background-color: rgba(#FFFFFF, 0);
+  cursor: pointer;
+  backdrop-filter: blur(0);
+  transition: 0.5s;
+  visibility: hidden;
+  z-index: 5;
+  
+  &--show {
+    background-color: rgba(#FFFFFF, 0.4);
+    backdrop-filter: blur(10px);
+    visibility: visible;
+  }
 }
 
 .stage__wrapper {
@@ -86,14 +94,21 @@
   top: 50%;
   left: 50%;
   box-sizing: border-box;
-  display: none;
   width: 920px;
   padding: 30px;
   box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.3);
   background-color: rgba(#FFFFFF, 0.9);
+  opacity: 0;
+  transition: opacity 0.8s, z-index 0s;
   transform: translate(-50%, -50%);
-  backdrop-filter: blur(10px);
-  z-index: 3;
+  visibility: hidden;
+  z-index: -1;
+  
+  &--show {
+    opacity: 1;
+    visibility: visible;
+    z-index: 6;
+  }
 }
 
 .stage__close {
@@ -123,10 +138,41 @@
 }
 
 .stage__article {
-  display: flex;
+  display: none;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+  
+  &--show {
+    display: flex;
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  &--add {
+    
+    .stage__right {
+      height: 300px;
+      overflow-y: scroll;
+      
+      &::-webkit-scrollbar {
+        width: 5px;
+      }
+    }
+    
+    .stage__text {
+      margin: 10px 0;
+      
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+    
+    .stage__name {
+      margin-bottom: 15px;
+      font-size: 20px;
+    }
+  }
 }
 
 .stage__left {
@@ -199,6 +245,10 @@
   &:focus {
     box-shadow: 0px 1px 5px 0px rgba(64, 64, 64, 0.8);
   }
+  
+  &:active {
+    transform: scale(0.9);
+  }
 }
 
 @media screen and ($tablet) {
@@ -238,6 +288,10 @@
     padding-top: 40px;
     transform: translate(-50%, 0%);
     overflow-y: scroll;
+    
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
   }
   
   .stage__article {
