--- a/study-as/source/sass/blocks/video.scss
+++ b/study-as/source/sass/blocks/video.scss
@@ -6,7 +6,7 @@
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
-  // image-rendering: pixelated;
+  transition: 0.5s;
 }
 
 .video__quote {
