--- a/study-as/source/sass/blocks/short.scss
+++ b/study-as/source/sass/blocks/short.scss
@@ -28,6 +28,7 @@
 }
 
 .short__item {
+  position: relative;
   box-sizing: border-box;
   width: 375px;
   padding-top: 20px;
@@ -35,6 +36,12 @@
   color: $text;
   font-size: 16px;
   font-weight: 400;
+  transition: 0.8s;
+  
+  &--hide {
+    opacity: 0;
+    transform: translateY(20px);
+  }
   
   &--top {
     display: block;
@@ -65,17 +72,58 @@
     padding-left: 90px;
     border-left: 2px dashed #ffa903;
     border-right: 2px dashed #ffa903;
+    
+    &::after {
+      content: '';
+      position: absolute;
+      top: 15px;
+      right: 50px;
+      width: 60px;
+      height: 60px;
+      background-image: url('../img/short-1.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+    }
   }
   
   &:nth-child(3) {
     padding-left: 40px;
+    
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0px;
+      right: 30px;
+      width: 50px;
+      height: 60px;
+      background-image: url('../img/short-2.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+    }
   }
   
   &:nth-child(4) {
+    padding-top: 45px;
     border-top: 2px dashed #ffa903;
+    
+    &::after {
+      content: '';
+      position: absolute;
+      top: 5px;
+      right: 30px;
+      width: 80px;
+      height: 80px;
+      background-image: url('../img/short-3.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+    }
   }
   
   &:nth-child(5) {
+    padding-top: 55px;
     padding-left: 60px;
     border-top: 2px dashed #ffa903;
     border-left: 2px dashed #ffa903;
@@ -83,8 +131,22 @@
   }
   
   &:nth-child(6) {
-    padding-left: 110px;
+    padding-top: 55px;
+    padding-left: 100px;
     border-top: 2px dashed #ffa903;
+    
+    &::after {
+      content: '';
+      position: absolute;
+      top: 10px;
+      right: 30px;
+      width: 70px;
+      height: 70px;
+      background-image: url('../img/short-4.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+    }
   }
 }
 
@@ -102,6 +164,10 @@
       margin-top: 0;
     }
     
+    &::after {
+      display: none;
+    }
+    
     &:nth-child(2) {
       padding-left: 20px;
       border-right: none;
@@ -109,6 +175,7 @@
     }
     
     &:nth-child(3) {
+      padding-top: 30px;
       padding-left: 20px;
       border-top: 2px dashed #ffa903;
     }
@@ -155,18 +222,23 @@
       align-items: center;
     }
     
+    &:nth-child(1) {
+      padding: 25px 10px;
+    }
+    
     &:nth-child(2) {
-      padding-left: 10px;
+      padding: 25px 10px;
       border-right: none;
       border-left: 2px dashed #ffa903;
     }
     
     &:nth-child(3) {
-      padding-left: 10px;
+      padding: 25px 10px;
       border-top: 2px dashed #ffa903;
     }
     
     &:nth-child(4) {
+      padding: 25px 10px;
       border-top: 2px dashed #ffa903;
       border-left: 2px dashed #ffa903;
       
@@ -176,14 +248,14 @@
     }
     
     &:nth-child(5) {
-      padding-left: 10px;
+      padding: 25px 10px;
       border-top: 2px dashed #ffa903;
       border-right: none;
       border-left: none;
     }
     
     &:nth-child(6) {
-      padding-left: 10px;
+      padding: 25px 10px;
       border-top: 2px dashed #ffa903;
       border-left: 2px dashed #ffa903;
     }
