--- a/study-as/source/sass/blocks/stage.scss
+++ b/study-as/source/sass/blocks/stage.scss
@@ -77,14 +77,12 @@
   height: 100%;
   background-color: rgba(#FFFFFF, 0);
   cursor: pointer;
-  backdrop-filter: blur(0);
   transition: 0.5s;
   visibility: hidden;
   z-index: 5;
   
   &--show {
-    background-color: rgba(#FFFFFF, 0.4);
-    backdrop-filter: blur(10px);
+    background-color: rgba(#FFFFFF, 0.9);
     visibility: visible;
   }
 }
@@ -97,16 +95,17 @@
   width: 920px;
   padding: 30px;
   box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.3);
-  background-color: rgba(#FFFFFF, 0.9);
+  background-color: #FFFFFF;
   opacity: 0;
-  transition: opacity 0.8s, z-index 0s;
-  transform: translate(-50%, -50%);
+  transition: opacity 0.8s, transform 0.3s, z-index 0s;
+  transform: translate(-50%, -50%) scale(0.8);
   visibility: hidden;
   z-index: -1;
   
   &--show {
     opacity: 1;
     visibility: visible;
+    transform: translate(-50%, -50%) scale(1);
     z-index: 6;
   }
 }
