--- a/study-danit/app/sass/blocks/intro.scss
+++ b/study-danit/app/sass/blocks/intro.scss
@@ -7,7 +7,7 @@
   position: relative;
   margin-top: 0;
   margin-bottom: 20px;
-  padding-top: 150px;
+  padding-top: 100px;
   color: #FFFFFF;
   font-size: 35px;
   font-weight: 600;
@@ -16,6 +16,7 @@
   
   &--blue {
     color: #093069;
+    font-size: 60px;
   }
 }
 
@@ -27,6 +28,18 @@
   font-size: 20px;
   font-weight: 400;
   text-align: center;
+  z-index: 1;
+}
+
+.intro__request {
+  position: relative;
+  width: 600px;
+  margin: 0 auto;
+  padding: 15px;
+  padding-bottom: 0;
+  border-radius: 10px;
+  background-color: rgba(#FFFFFF, 0.1);
+  backdrop-filter: blur(10px);
   z-index: 1;
 }
 
@@ -114,23 +127,35 @@
 @media screen and ($mobile-widths) {
   .intro__wrapper {
     height: auto;
-    padding-bottom: 400px;
+    padding-bottom: 350px;
   }
   
   .intro__title {
-    padding-top: 150px;
     font-size: 22px;
+    
+    &--blue {
+      font-size: 30px;
+    }
   }
   
   .intro__text {
     padding: 0 20px;
     font-size: 16px;
+    
+    br {
+      display: none;
+    }
   }
   
   .intro__button {
     width: 160px;
     margin-bottom: 100px;
     font-size: 16px;
+  }
+  
+  .intro__request {
+    box-sizing: border-box;
+    width: 90%;
   }
   
   .intro__sublist {
