--- a/study-uk/source/sass/blocks/table.scss
+++ b/study-uk/source/sass/blocks/table.scss
@@ -4,6 +4,7 @@
   
   &:first-of-type {
     margin-top: 50px;
+    margin-bottom: 10px;
   }
 }
 
@@ -12,6 +13,7 @@
 }
 
 .table__title {
+  position: relative;
   display: block;
   padding: 15px 0;
   color: #FFFFFF;
@@ -19,9 +21,10 @@
   font-weight: 500;
   text-align: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  background-color: #5780B9;
   
-  &:first-of-type {
-    background-color: #5780B9;
+  &--orange {
+    background-color: #EE5B47;
   }
 }
 
@@ -39,20 +42,44 @@
 }
 
 .table__list {
+  counter-reset: number;  
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
 .table__item {
+  position: relative;
   margin-bottom: 15px;
   padding-left: 30px;
   color: $text;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
   
   &:last-child {
     margin-bottom: 0;
+  }
+  
+  &::before {
+    counter-increment: number;   
+    content: counter(number);
+    position: absolute;
+    top: -3px;
+    left: 0;
+    padding: 2px 6px;
+    color: #FFFFFF;
+    font-size: 14px;
+    font-weight: 700;
+    border: 2px solid #FFFFFF;
+    border-radius: 50%;
+    background-color: $blue;
+  }
+  
+  &--orange {
+    
+    &::before {
+      background: $orange;
+    }
   }
 }
 
@@ -62,17 +89,63 @@
 }
 
 .table__column {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
-  height: 424px;
+  position: relative;
+  width: 225px;
+  height: 487px;
+  
+  &--short {
+    height: 270px;
+    
+    &::after {
+      display: none;
+    }
+  }
+  
+  &--eco {
+    background: #FFFFFF !important;
+    
+    &::before {
+      content: '';
+      position: absolute;
+      top: -10px;
+      left: -23px;
+      width: 380px;
+      height: 300px;
+      background-image: url('../img/table-arrow.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      z-index: 1;
+    }
+  }
+  
+  &::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: -19px;
+    width: 20px;
+    height: 45px;
+    clip-path: polygon(0 100%, 0 0, 100% 50%);
+    z-index: 1;
+  }
   
   &:nth-child(1) {
     background-color: #878B94;
+    
+    &::after {
+      background: #878B94;
+    }
   }
   
   &:nth-child(2) {
     background-color: #5780B9;
+    
+    &::after {
+      background: #5780B9;
+    }
   }
   
   &:nth-child(3) {
@@ -87,8 +160,82 @@
   font-size: 25px;
   font-weight: 500;
   text-align: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.table__box {
+  position: absolute;
+  top: 70px;
+  left: 50%;
+  filter: drop-shadow(0 7px 4px rgba(0, 0, 0, 0.25));
+}
+
+.table__arrow {
+  width: 45px;
+  height: 20px;
+  clip-path: polygon(50% 100%, 0 0, 100% 0);
+  transform: translateX(-50%);
+  
+  &--gray {
+    background: #878B94;
+  }
+  
+  &--blue {
+    background: #5780B9;
+  }
+  
+  &--pink {
+    background: #E97F7F;
+  }
 }
 
 .table__text {
   margin: auto;
+  color: #FFFFFF;
+  font-size: 22px;
+  font-weight: 500;
+  text-align: center;
+  
+  &--eco {
+    padding-left: 60px;
+    color: #EE5B47;
+    background-image: url('../img/clock.svg');
+    background-repeat: no-repeat;
+    background-position: left;
+  }
+}
+
+.table__checklist {
+  margin: 0;
+  margin-top: 15px;
+  margin-left: 20px;
+  padding: 0;
+  text-align: left;
+  list-style: none;
+}
+
+.table__check {
+  position: relative;
+  margin-bottom: 10px;
+  padding-left: 20px;
+  font-size: 18px;
+  
+  &:last-child {
+    margin-bottom: 0;
+  }
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: 4px;
+    left: 0;
+    width: 10px;
+    height: 10px;
+    border: 2px solid #FFFFFF;
+    border-radius: 50%;
+  }
+}
+
+@media screen and ($tablet) {
+  
 }
