--- a/study-summer/winter/source/sass/blocks/slider.scss
+++ b/study-summer/winter/source/sass/blocks/slider.scss
@@ -60,6 +60,18 @@
     background-image: url('../img/slider-2.jpg');
   }
   
+  &:nth-child(3) {
+    background-image: url('../img/slider-3.jpg');
+  }
+  
+  &:nth-child(4) {
+    background-image: url('../img/slider-4.jpg');
+  }
+  
+  &:nth-child(5) {
+    background-image: url('../img/slider-5.jpg');
+  }
+  
   &--show {
     opacity: 1;
     visibility: visible;
@@ -78,7 +90,7 @@
   display: block;
   margin-bottom: 20px;
   color: #fff;
-  font-size: 22px;
+  font-size: 21px;
   font-weight: bold;
 }
 
