add page program

--- a/study-summer/winter/source/sass/program/photo.scss
+++ b/study-summer/winter/source/sass/program/photo.scss
@@ -97,14 +97,13 @@
 }
 
 .photo__link {
-  width: 320px;
+  width: 280px;
   height: 30px;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   
   &:first-child {
-    margin-right: 30px;
     background-image: url('../img/facebook-hashtag.svg');
   }
   
@@ -168,7 +167,7 @@
     
     &:first-child {
       margin-right: 0;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
   }
 }
