--- a/study-as/source/sass/blocks/review.scss
+++ b/study-as/source/sass/blocks/review.scss
@@ -75,7 +75,7 @@
   padding-left: 34px;
   background-image: url('../img/quote.svg');
   background-repeat: no-repeat;
-  background-position: top left;
+  background-position: left -30px;
   background-size: 200px;
 }
 
